array.island.Island.scala.error
Compilation error:
Island:5: error: not found: value lvl
  lvl = 0
  ^Island:8: error: not found: value lvl
    while (num(lvl+1)>num(lvl)) {
               ^Island:8: error: not found: value lvl
    while (num(lvl+1)>num(lvl)) {
                          ^Island:9: error: not found: value lvl
    lvl+=1
    ^Island:6: error: type mismatch;
 found   : Unit
 required: Int
  while (compteur <= len) {
  ^Island:16: error: not found: value taille
  taille = 0
  ^Island:17: error: not found: value taille
  while (num(taille)<100) {
             ^Island:18: error: not found: value taille
    taille += 1
    ^Island:17: error: type mismatch;
 found   : Unit
 required: Int
  while (num(taille)<100) {
  ^Island:20: error: return outside method definition
};return longueur 
  ^